# logic-conduit

./: .gitignore  AGENTS.md  Cargo.toml  NOTES  README.md  TODO.md  rustfmt.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs  main_native.rs  main_wasm.rs
crates/app/web/: index.html  main.js
crates/app_native/: Cargo.toml
crates/app_native/src/: macos_menu.rs  main.rs  native.rs
crates/app_web/: Cargo.toml
crates/app_web/data/: wasm_decoder_demo.json
crates/app_web/src/: lib.rs
crates/app_web/web/: index.html  main.js  manifest.webmanifest  style.css
crates/dsl/: Cargo.toml
crates/dsl/src/: lib.rs
crates/dsl/src/nodes/: capture.rs  dsl_file.rs  dsl_index.rs  dslogic_u3pro16.rs  logic_analyzer.rs  mod.rs  sigrok_file.rs  uart_demo_source.rs
crates/dsl/src/runtime/: capture.rs  cooperative_manager.rs  derived_index.rs  edge_query.rs  errors.rs  events.rs  manager.rs  mod.rs  node.rs  pipeline.rs  ports.rs  raw_block_cache.rs  receiver.rs  sample.rs  sample_kind.rs  scheduler.rs  sender.rs  type_registry.rs  watchdog.rs  waveform_index.rs  worker_pool.rs
crates/input_bindings/: Cargo.toml
crates/input_bindings/src/: lib.rs
crates/logic_analyzer_capture_export/: Cargo.toml
crates/logic_analyzer_capture_export/src/: lib.rs
crates/logic_analyzer_capture_export/src/capture_export/: implementation.rs  mod.rs  presentation.rs
crates/logic_analyzer_graph/: Cargo.toml
crates/logic_analyzer_graph/src/: capture_export.rs  lib.rs  test_support.rs
crates/logic_analyzer_graph/src/capture_export/: implementation.rs  mod.rs  presentation.rs
crates/logic_analyzer_graph/src/collected_payloads/: presentation.rs  registration.rs
crates/logic_analyzer_graph/src/compiler/: architecture_tests.rs  binary_decoder.rs  buffer.rs  cache_platform_native.rs  cache_platform_wasm.rs  collected_payload_registration.rs  counter.rs  csv_writer.rs  data_collector.rs  errors.rs  file_source.rs  file_writer.rs  formatter.rs  graph.rs  graph_compiler.rs  graph_node_registration.rs  logic_gate.rs  mod.rs  plugin.rs  port_kind.rs  saved_graph.rs  sigrok_file_source.rs  spi_decoder.rs  sr_flip_flop.rs  text_file_writer.rs  tgck_recorder.rs  uart_decoder.rs  uart_demo_source.rs  viewer.rs  word_matcher.rs
crates/logic_analyzer_graph/src/decoder_table/: contract.rs  mod.rs  subscription.rs
crates/logic_analyzer_graph/src/host/: mod.rs
crates/logic_analyzer_graph/src/node/: mod.rs
crates/logic_analyzer_graph/src/node_support/: mod.rs
crates/logic_analyzer_graph/src/nodes/: binary_decoder.rs  buffer.rs  catalog.rs  counter.rs  csv_writer.rs  dslogic_u3pro16.rs  file_source.rs  file_writer.rs  formatter.rs  i2c_decoder.rs  logic_gate.rs  mod.rs  node_test_support.rs  platform_registration_tests.rs  platform_registration_web_tests.rs  preview.rs  registration.rs  registry.rs  registry_native.rs  registry_web.rs  sigrok_file_source.rs  spi_decoder.rs  sr_flip_flop.rs  text_file_writer.rs  tgck_recorder.rs  uart_decoder.rs  uart_demo_source.rs  viewer.rs  word_matcher.rs
crates/logic_analyzer_graph/src/test_support/: adapters.rs  mod.rs
crates/logic_analyzer_graph/src/viewer_lanes/: mod.rs  uart.rs
crates/logic_analyzer_graph_api/: Cargo.toml
crates/logic_analyzer_graph_api/src/: lib.rs
crates/logic_analyzer_graph_api/src/node/: contracts.rs  graph_registration.rs  mod.rs  payload_registration.rs
crates/logic_analyzer_graph_api/src/node_support/: contracts.rs  mod.rs  port.rs
crates/logic_analyzer_graph_nodes/: Cargo.toml
crates/logic_analyzer_graph_nodes/src/: lib.rs  link.rs
crates/logic_analyzer_graph_nodes/src/collected_payloads/: mod.rs  registration.rs
crates/logic_analyzer_graph_nodes/src/nodes/: mod.rs  platform_registration_tests.rs  platform_registration_web_tests.rs  registry.rs
crates/logic_analyzer_graph_nodes/src/test_support/: implementation.rs  mod.rs
crates/logic_analyzer_processing/: Cargo.toml
crates/logic_analyzer_processing/src/: capture_export.rs  lib.rs
crates/logic_analyzer_processing/src/live_capture/: analysis.rs  buffered_fake_native.rs  conformance_tests.rs  fake_native.rs  implementation.rs  mod.rs  u3pro16_buffered_native.rs  u3pro16_common_native.rs  u3pro16_streaming_native.rs
crates/logic_analyzer_processing/src/nodes/: capture_archive.rs  demo_capture_source.rs  dsl_file.rs  dslogic_u3pro16.rs  logic_analyzer.rs  mod.rs  sigrok_file.rs  uart_demo_source.rs
crates/logic_analyzer_processing/tests/: public_usb_transport.rs
crates/logic_analyzer_test_support/: Cargo.toml
crates/logic_analyzer_test_support/src/: buffered_fake.rs  lib.rs
crates/logic_analyzer_ui/: Cargo.toml
crates/logic_analyzer_ui/config/: application.json  input_bindings.json
crates/logic_analyzer_ui/src/: about.rs  app.rs  application_config.rs  demo_signals.rs  input_binding_config.rs  lib.rs  plugin.rs  product.rs  toast.rs
crates/node_graph/: Cargo.toml
crates/node_graph/src/: builtins.rs  definition.rs  draw.rs  graph.rs  interaction.rs  lib.rs  minimap.rs  registry.rs  runtime.rs  socket.rs  types.rs  value.rs  view.rs  widget.rs
crates/signal_processing/: Cargo.toml
crates/signal_processing/src/: advanced_trigger.rs  architecture_tests.rs  capture.rs  capture_backing_native.rs  capture_backing_wasm.rs  capture_policy.rs  collected_payload.rs  cooperative_manager.rs  crc32c.rs  derived_data_collector.rs  derived_index.rs  edge_query.rs  errors.rs  events.rs  graph.rs  idle_wasm.rs  lib.rs  live_capture.rs  manager.rs  node.rs  pipeline.rs  ports.rs  protocol.rs  raw_block_cache.rs  receiver.rs  sample.rs  sample_kind.rs  sampling_activity.rs  scheduler.rs  sender.rs  type_registry.rs  viewer_sink.rs  watchdog.rs  worker_pool.rs
crates/ui/: Cargo.toml
crates/ui/src/: about.rs  app.rs  compile.rs  lib.rs  logic_analyzer_viewer.rs  main.rs  nodes.rs  toast.rs
crates/ui/src/nodes/: mod.rs  (+19 more)
crates/ui/web/: main.js  style.css
crates/widgets/node_graph/: Cargo.toml
crates/widgets/panel_layout/: Cargo.toml
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: camera_frame.rs  lib.rs  pulse_measure.rs
(+701 files in other folders)
