[workspace]
members = [".", "crates/app", "crates/dsl", "crates/logic_analyzer_viewer", "crates/node_graph", "crates/ui", "plugins/example-plugin"]
default-members = ["."]
resolver = "2"

[package]
name = "dsl-examples"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false
default-run = "dsl-ui"

[[bin]]
name = "dsl-ui"
path = "crates/app/src/main.rs"

# This bin target compiles `crates/app/src/main.rs` again under the root
# package's own identity (separate from `dsl-app`'s own `[[bin]]` of the
# same name/path) — declaring the feature name here just keeps that
# duplicate compilation's `#[cfg(feature = "example-plugin")]` check happy;
# it's never enabled for this package.
[features]
example-plugin = []

[dependencies]
dsl = { path = "crates/dsl" }
dsl-ui = { path = "crates/ui" }
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
memmap2 = "0.9.11"
minifb = "0.28"
node-graph = { path = "crates/node_graph" }
eframe = "0.35"
egui = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
debug = true
