[workspace]
members = [".", "crates/app", "crates/dsl", "crates/logic_analyzer_viewer", "crates/node_graph", "crates/ui", "plugins/example-plugin"]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.16"
eframe = { version = "0.35", features = ["persistence"] }
egui = "0.35"
lazy_static = "1.5"
libc = "0.2.186"
log = "0.4"
memmap2 = "0.9.11"
minifb = "0.28"
rfd = "0.17.2"
rusb = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement"] }
web-time = "1.1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[package]
name = "dsl-examples"
version.workspace = true
edition = "2024"
publish = false
autobins = false
default-run = "dsl-ui"

[[bin]]
name = "dsl-ui"
path = "crates/app/src/main.rs"

# This bin target compiles `crates/app/src/main.rs` again under the root
# package's own identity (separate from `dsl-app`'s own `[[bin]]` of the
# same name/path) — declaring the feature name here just keeps that
# duplicate compilation's `#[cfg(feature = "example-plugin")]` check happy;
# it's never enabled for this package.
[features]
example-plugin = []

[dependencies]
dsl = { path = "crates/dsl" }
dsl-ui = { path = "crates/ui" }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
memmap2 = { workspace = true }
minifb = { workspace = true }
node-graph = { path = "crates/node_graph" }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[profile.release]
debug = true
