[workspace]
members = [".", "crates/app_native", "crates/app_web", "crates/input_bindings", "crates/logic_analyzer_graph", "crates/logic_analyzer_graph_api", "crates/logic_analyzer_graph_nodes", "crates/logic_analyzer_processing", "crates/logic_analyzer_ui", "crates/signal_processing", "crates/widgets/logic_analyzer_viewer", "crates/widgets/node_graph", "crates/widgets/panel_layout", "crates/widgets/trigger_editor", "crates/widgets/widget_support", "plugins/example-plugin"]
default-members = ["crates/app_native"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.16"
dirs = "6.0.0"
eframe = { version = "0.35.0", features = ["persistence"] }
egui = "0.35.0"
lazy_static = "1.5.0"
libc = "0.2.186"
log = "0.4.33"
memmap2 = "0.9.11"
minifb = "0.28.0"
rfd = "0.17.2"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
blake3 = "1.8.5"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement"] }
web-time = "1.1.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
inventory = "0.3.24"

[package]
name = "logic-analyzer-examples"
version.workspace = true
edition = "2024"
publish = false
autobins = false
autoexamples = false

# The graph-based examples live in graphs/. This is the sole standalone Rust
# example because it is a native framebuffer utility rather than a pipeline.
[[example]]
name = "ccd_viewer"
path = "examples/ccd_viewer.rs"

[dependencies]
clap = { workspace = true }
memmap2 = { workspace = true }
minifb = { workspace = true }

[profile.release]
debug = true
