[package]
name = "dsl-app"
version = "0.1.0"
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "dsl_app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dsl-ui"
path = "src/main.rs"

[dependencies]
dsl-ui = { path = "../ui" }
eframe = "0.35"
egui = "0.35"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement"] }
