[package]
name = "dsl-app"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "dsl_app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dsl-ui"
path = "src/main.rs"

[dependencies]
dsl-ui = { path = "../ui" }
eframe = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
example-plugin = { path = "../../plugins/example-plugin", optional = true }

[features]
example-plugin = ["dep:example-plugin"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
