[package]
name = "logic-analyzer-app-native"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[[bin]]
name = "logic-conduit"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
logic-analyzer-ui = { path = "../logic_analyzer_ui" }
tracing-subscriber = { workspace = true }
example-plugin = { path = "../../plugins/example-plugin", optional = true }

[features]
example-plugin = ["dep:example-plugin"]

[dev-dependencies]
logic-analyzer-graph = { path = "../logic_analyzer_graph" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSMenu", "NSMenuItem", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
