[package]
name = "logic-analyzer-app-web"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "logic_analyzer_app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { workspace = true }
log = { workspace = true }
logic-analyzer-ui = { path = "../logic_analyzer_ui" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
