[package]
name = "logic-analyzer-app-web"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "logic_conduit"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { workspace = true }
log = { workspace = true }
logic-analyzer-ui = { path = "../logic_analyzer_ui" }
node-graph = { path = "../widgets/node_graph" }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
example-plugin = { path = "../../plugins/example-plugin", optional = true }

[features]
example-plugin = ["dep:example-plugin"]
