[package]
name = "dsl"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]
description = "A library for loading and parsing DSLogic .dsl files"
readme = "README.md"
repository = "https://github.com/rcaelers/dsl_loader"
license = "MIT"

[lib]
name = "dsl"
path = "src/lib.rs"

[dependencies]
zip = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = { workspace = true }
minifb = { workspace = true }
rusb = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
