[package]
name = "logic-analyzer-capture-export"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "logic_analyzer_capture_export"
path = "src/lib.rs"

[dependencies]
signal-processing = { path = "../signal_processing" }
tempfile = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
