[package]
name = "logic-analyzer-processing"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]
description = "Concrete logic-analyzer capture sources, processors, decoders, and sinks"
repository = "https://github.com/rcaelers/dsl_loader"
license = "MIT"

[lib]
name = "logic_analyzer_processing"
path = "src/lib.rs"

[dependencies]
signal-processing = { path = "../signal_processing" }
zip = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusb = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
