[package]
name = "logic-analyzer-test-support"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]
publish = false

[lib]
name = "logic_analyzer_test_support"
path = "src/lib.rs"

[dependencies]
signal-processing = { path = "../signal_processing" }

[dev-dependencies]
tempfile = { workspace = true }
