[package]
name = "logic-analyzer-ui"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "logic_analyzer_ui"
path = "src/lib.rs"

[dependencies]
input-bindings = { path = "../input_bindings" }
signal-processing = { path = "../signal_processing" }
logic-analyzer-processing = { path = "../logic_analyzer_processing" }
logic-analyzer-graph = { path = "../logic_analyzer_graph" }
logic-analyzer-viewer = { path = "../widgets/logic_analyzer_viewer" }
node-graph = { path = "../widgets/node_graph" }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
