[package]
name = "node-graph"
version = "0.1.0"
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "node_graph"
path = "src/lib.rs"

[dependencies]
egui = { version = "0.35.0", features = ["serde"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
