[package]
name = "signal-processing"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]
description = "UI-independent streaming runtime and generic signal-processing infrastructure"
readme = "README.md"
repository = "https://github.com/rcaelers/dsl_loader"
license = "MIT"

[lib]
name = "signal_processing"
path = "src/lib.rs"

[dependencies]
zip = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
lazy_static = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
