[package]
name = "dsl-ui"
version = "0.1.0"
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "dsl_ui"
path = "src/lib.rs"

[dependencies]
dsl = { path = "../dsl" }
logic-analyzer-viewer = { path = "../logic_analyzer_viewer" }
node-graph = { path = "../node_graph" }
eframe = "0.35"
egui = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
