[package]
name = "dsl-ui"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "dsl_ui"
path = "src/lib.rs"

[dependencies]
dsl = { path = "../dsl" }
logic-analyzer-viewer = { path = "../logic_analyzer_viewer" }
node-graph = { path = "../node_graph" }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
blake3 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
