[package]
name = "example-plugin"
version.workspace = true
edition = "2024"

[lib]
name = "example_plugin"
path = "src/lib.rs"

[dependencies]
dsl = { path = "../../crates/dsl" }
dsl-ui = { path = "../../crates/ui" }
node-graph = { path = "../../crates/node_graph" }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
crossbeam-channel = { workspace = true }
