[package]
name = "example-plugin"
version.workspace = true
edition = "2024"

[lib]
name = "example_plugin"
path = "src/lib.rs"

[dependencies]
signal-processing = { path = "../../crates/signal_processing" }
logic-analyzer-graph = { path = "../../crates/logic_analyzer_graph" }
node-graph = { path = "../../crates/widgets/node_graph" }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
crossbeam-channel = { workspace = true }
