[package]
name = "node-graph"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "node_graph"
path = "src/lib.rs"

[dependencies]
input-bindings = { path = "../../input_bindings" }
egui = { workspace = true, features = ["serde"] }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
