[package]
name = "panel-layout"
version.workspace = true
edition = "2024"
authors = ["Rob Caelers <rob.caelers@gmail.com>"]

[lib]
name = "panel_layout"
path = "src/lib.rs"

[dependencies]
egui = { workspace = true }
input-bindings = { path = "../../input_bindings" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
